fix: hide orphan when left sidebar collapsed
orphan list item was still displayed in collapsed sidebar, which caused some probs when it was active.  Performance on expanding/collapsing sidebar when orphan is active is still poor

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -14684,6 +14684,9 @@ aside.left-sidebar[data-state=collapsed] div.toc-controls [data-set-state=expand
 aside.left-sidebar[data-state=collapsed] ul li.subtoc.active {
   background: none;
 }
+aside.left-sidebar[data-state=collapsed] ul li.orphan {
+  display: none;
+}
 aside.left-sidebar .toc-titles {
   border-radius: 3px;
   padding: 8px 0;
